[project]
name = "headlines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alpaca-api-project",
  "alpaca-py>=0.40.1",
  "ipykernel>=6.29.5",
  "ipywidgets>=8.1.7",
  "kagglehub>=0.3.12",
  "lxml>=5.4.0",
  "openai>=1.91.0",
  "pandas>=2.3.0",
  "pip>=25.1.1",
  "polars>=1.31.0",
  "polygon>=1.2.6",
  "pyarrow>=20.0.0",
  "python-dotenv>=1.1.1",
  "requests>=2.32.4",
  "setuptools>=80.9.0",
  "tqdm>=4.67.1",
  "ydata-profiling>=4.16.1",
  "yfinance>=0.2.63",
]

[tool.uv.sources]
alpaca-api-project = { path = "../python/alpaca_api_project" }
