[project]
name = "headlines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alpaca-api-project",
  "ipykernel>=6.29.5",
  "ipywidgets>=8.1.7",
  "pandas>=2.3.0",
  "pip>=25.1.1",
  "polars>=1.31.0",
  "python-dotenv>=1.1.1",
  "pyyaml>=6.0.2",
  "setuptools>=80.9.0",
  "tqdm>=4.67.1",
]

[tool.uv.sources]
alpaca-api-project = { git = "https://github.com/isaiahtx/alpaca-api.git" }
